fixed some bugs
full translation, bus update crash fixed